src/objects/NIDD_KPIs__x.object
<CustomObject>
    <description>NIDD KPIs</description>
    <externalDataSource>ExternalDS_MIKA</externalDataSource>
    <externalName>NIDD KPIs</externalName>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domain_Name__c</fullName>
        <description>Domain Name</description>
        <externalDeveloperName>Domain Name</externalDeveloperName>
        <label>Domain Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name</description>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NIDD KPIs</label>
    <pluralLabel>NIDD KPIs</pluralLabel>
</CustomObject>